<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activiy_main_my_apps"
        android:textSize="32sp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/button_movies"
        android:text="@string/activity_main_movies"
        style="@style/ActivityMainList"
        android:onClick="showToast"
        />

    <Button
        android:id="@+id/button_scores"
        android:text="@string/activity_main_scores"
        style="@style/ActivityMainList"
        android:onClick="showToast"
        />

    <Button
        android:id="@+id/button_library"
        android:text="@string/activity_main_library"
        style="@style/ActivityMainList"
        android:onClick="showToast"
        />

    <Button
        android:id="@+id/button_build"
        android:text="@string/activity_main_build"
        style="@style/ActivityMainList"
        android:onClick="showToast"
        />

    <Button
        android:id="@+id/button_xyz"
        android:text="@string/activity_main_xyz"
        style="@style/ActivityMainList"
        android:onClick="showToast"
        />

    <Button
        android:id="@+id/button_own"
        android:text="@string/activity_main_own"
        android:background="#ff8383"
        android:onClick="showToast"
        style="@style/ActivityMainList"/>


</LinearLayout>

